$Id: NEWS,v 1.88 2006/01/14 10:39:34 rocky Exp $

version 0.77cvs
=====================================
????-??-??

- NULL drive in cdio_eject_media_drive uses default drive to close.
  Document that NULL also uses default drive in close_tray, cdio_open
  and cdio_open_am.

- replace libpopt with getopt (cd-drive, cd-info, iso-info, iso-read)

- OSX was freeing too much in listing drives

- Some provision for handling Rock-Ridge device numbers.

- Document cd-paranoia (Peter J. Creath)

- Start UDF handling

- increase use of enumerations more and decrease use of #defines

- Add an object-oriented C++ wrapper.

- Doxygen formatting improvements.

version 0.76
=====================================
2005-09-23

- Better compatibility with C++

- a better eject routine for FreeBSD

- Fix bug in not specifying a device name in libcio_cdda

- Add S_ISSOCK() or S_ISLNK() macros for Rock-Ridge when environment
  doesn't have it, e.g. MSYS 1.0.10 with MinGW 3.4.2.

- Allow building cd-paranoia if Perl is not installed.

- More accurate library dependency tracking in linking and pkg-config 

- Miscellaneous minor bug fixes.

- cdio/cdda.h headers no longer depends on cdio/paranoia.h but vice versa
  is true. This may require an #include <cdio/cdda.h> in some applications that
  used <cdio/paranoia.h> but didn't include it.

version 0.75
=====================================
2005-07-11

- audio volume level fix on Microsoft Windows 
- fix build when --enable-shared, --disable-static
- CD-Text retrieval fix
- allow the MMC timeout to be adjusted by the application
- cd-paranoia: Add option --mmc-timeout (-m) to set MMC timeout. 
  We now check that integer arguments are integers and are within
  range.
- changes for libcddb 1.1.0 API change
- remove gcc 4.0 warnings
- miscellaneous small bug fixes, removal of questionable idioms or 
  memory leak fixes

version 0.74
=====================================
2005-05-13

- cd-paranoia fixes 
- cdda-player fixes